<resources>
    <string name="app_name">HolidayMe</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_language">SelectLanguageActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="Home">Home</string>
    <string name="hotel">Hotels</string>
    <string name="Term_of_Use">Term of Use</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="facebook_app_id" translatable="false">1708056119434616</string>
    <string name="ga_app_tracker_id" translatable="false">UA-75772848-1</string>
    <string name="EN">EN</string>
    <string name="default_lang">EN</string>
    <string name="AR">AR</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">Login</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_profile">My Profile</string>
    <string name="nav_item_terms_of_use">Terms of Use</string>
    <string name="nav_item_booking">My Bookings</string>
    <string name="nav_item_privacy_policy">Privacy Policy</string>
    <string name="nav_item_contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="save_and_continue">SAVE  AND CONTINUE</string>
    <string name="Skip">SKIP</string>
    <string name="Skip_Login">Skip Login</string>
    <string name="ok">OK</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection.</string>
    <string name="server_is_not_responding_please_try_after_some_time">There appears to be some problem in communicating with the server. Please try after some time.</string>
    <string name="English">ENGLISH</string>
    <string name="ARABIC">العربية</string>
    <string name="Please_enter_a_valid_email_ID">Please Enter Valid Email ID</string>
    <string name="letsgo">Search</string>
    <string name="nearme">Near me</string>
    <string name="Check_in">Check In</string>
    <string name="Check_out">Check Out</string>
    <string name="addroom">Add Room</string>
    <string name="Invalid_destination_Please_select_valid_destination">Invalid destination. Please Select Valid Destination..</string>
    <string name="date_difference"> Difference Between From and To Date Cannot be Greater Than 25.</string>
    <string name="sorry_unable_to_process_your_request_please_try_after_some_time"> Sorry ,Unable To Process Your Request Please Try After Some Time.</string>
    <string name="Search_Hotel"> Search City or Hotel Name </string>
    <string name="Search_listing">Search by Hotel Name</string>
    <string name="no_hotel_available"> Unfortunately, No Hotel is available for the given destination for the given dates. Please change either the destination or travel details, Click ok to try again</string>
    <string name="Kids"> Kids</string>
    <string name="Kid"> Kid</string>
    <string name="Room">Rooms</string>
    <string name="room">Room</string>
    <string name="payat_hotel">PAY AT HOTEL</string>
    <string name="no_anemites_found"> No Amenities found</string>
    <string name="no_review_found">No Reviews found</string>
    <string name="Cancel">Cancel</string>
    <string name="you_need_to_switch_on_your_location_settings_for_tab_search">HolidayMe Needs Access To Your Location.Please Turn On Location Access.</string>
    <string name="unable_to_fetch_your_current_location">Unable To Access Your Location.</string>
    <string name="city_not_found">Unable To Find Your City.</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="trip_advisor">Trip Advisor</string>
    <string name="aminities">Amenities</string>
    <string name="details">Details</string>
    <string name="Hotel_name">Radission</string>
    <string name="Reviews"> Reviews </string>
    <string name="nights">Nights</string>
    <string name="night">Night</string>
    <string name="max_adults">Max Adults:</string>
    <string name="includes">Includes :</string>
    <string name="Non_Refundable">Non Refundable</string>
    <string name="Free_Cancellation">Free Cancellation</string>
    <string name="Taxes_included">Taxes Inclusive</string>
    <string name="Taxes_not_included">Includes All Applicable Taxes</string>
    <string name="NA">Room Only</string>
    <string name="Refundable">Refundable</string>
    <string name="Book_now">BOOK NOW</string>
    <string name="select_currency"> SELECT CURRENCY </string>
    <string name="google_map_key" translatable="false">AIzaSyBWCaPEnHRL8rXWS5iZt_EBv6DzqYRgSeo</string>
    <string name="Hotel">Hotels</string>
    <string name="city">City</string>
    <string name="Rooms">Rooms</string>
    <string name="Totals">Totals</string>
    <string name="Adults">Adults</string>
    <string name="Adult">Adult</string>
    <string name="Price">Price</string>
    <string name="Rating">Star Rating</string>
    <string name="Theme">Theme</string>
    <string name="Amenities">Amenities</string>
    <string name="Hotel_chain">Hotel chain</string>
    <string name="Select_your_preferred_Amenities">Select Amenities</string>
    <string name="Select_your_preferred_Hotels">Select Hotel Chain</string>
    <string name="Select_your_preferred_location">Select Preferred Location</string>
    <string name="Select_your_preferred_Price">Choose Price Range</string>
    <string name="Select_your_preferred_Theme">Select Preferred Theme</string>
    <string name="Select_your_preferred_Rating">Select Star Rating</string>
    <string name="Select_your_prefered_trip_advisor_rating">Select TA Rating</string>
    <string name="HOTEL_POLICY_OF">Hotel Policy</string>
    <string name="DETAILS">Hotel Detail</string>
    <string name="Traveller_rating">Traveler Rating</string>
    <string name="Excellent">Excellent</string>
    <string name="Very_good">Very Good</string>
    <string name="Average">Average</string>
    <string name="Poor">Poor</string>
    <string name="Terrible">Terrible</string>
    <string name="See_reviews_for">See Reviews For</string>
    <string name="Families">Families</string>
    <string name="Rating_summary">Rating Summary</string>
    <string name="Recent_Reviews">Recent Reviews</string>
    <string name="reviews_from_our_community">Reviews From Our Community</string>
    <string name="Room_Booked_for">Room Booked For</string>
    <string name="Congratulation">Congratulation! your hotel has been successfully confirm</string>
    <string name="Thank_you">Thank you for choosing HolidayMe as your travel partner.</string>
    <string name="Booking_id">Booking id: </string>
    <string name="Confirmation_No">Confirmation No. </string>
    <string name="Check_In">Check In</string>
    <string name="Check_Out">Check Out</string>
    <string name="Rate_Break_Up">Rate Break Up</string>
    <string name="Gross_total">Gross Total</string>
    <string name="Dicount">Discount</string>
    <string name="Grand_Total">Grand Total</string>
    <string name="Payment_failure_1">Unfortunately, your attempt at online payment has failed and your booking for </string>
    <string name="Payment_failure_2">, was unsuccessful.Kindly review your payment details or try again using a different payment method</string>
    <string name="booking_fail_1">We are sorry to inform you that, for your</string>
    <string name="booking_fail_2">, payment has been charged even though the booking has unfortunately failed..We apologize for the inconvenience caused. Our team will contact you within a couple of hours for assistance</string>
    <string name="pay_at_hotel_confirm_1">Your booking of </string>
    <string name="pay_at_hotel_confirm_2"> has been tentatively accepted, pay the whole amount directly at the hotel </string>
    <string name="Cancellation_Policy"><u>Cancellation Policy</u></string>
    <string name="Cancellation_Policy_tab">Cancellation Policy</string>
    <string name="room_info">Room Information</string>
    <string name="By_Popularity">By Popularity</string>
    <string name="By_Price">By Price</string>
    <string name="By_Star_Rating">By Star Rating</string>
    <string name="By_Trip_Advisor_Rating">By Trip Advisor</string>
    <string name="Apply">Apply</string>
    <string name="Clear">Clear</string>
    <string name="Filter">Filter</string>
    <string name="Sort">SORT</string>
    <string name="Popularity">Popularity</string>
    <string name="Hotel_booking">Hotel booking</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="Done">Done</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email_Address">Email Address</string>
    <string name="Display_Name">Display Name</string>
    <string name="Mob_No">Mobile Number</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="Date">Date :</string>
    <string name="Check_In_Date">Check In Date</string>
    <string name="Check_out_date">Check out date</string>
    <string name="Billing_Amount">Billing Amount</string>
    <string name="no_booking"> No Booking Available</string>
    <string name="My_profile">My Profile</string>
    <string name="My_Booking">My Booking</string>
    <string name="Unavilable">Unavailable</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="Please_Login_First_profile">Please Log-In To View Your Profile.</string>
    <string name="Please_Login_First_booking">Please Log-In To View Your Bookings.</string>
    <string name="one_night">night</string>
    <string name="two_night">nights</string>
    <string name="three_ten_night">nights</string>
    <string name="eleven_and_above_night">يلة"</string>
    <string name="one_room">room</string>
    <string name="two_room">rooms </string>
    <string name="three_ten_room">rooms</string>
    <string name="cod_msg">"Your booking is pending with us, our customer care executive will get back to you within next 24 hours."</string>
    <string name="No_room_available">"Unfortunately No Rooms Are Available For The Selected Hotel."</string>
    <string name="location_no_rooms_available">"Unfortunately no rooms are available for selected hotel. Would you like to search more hotels in same city ? "</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="limit_restriction">Sorry! You cannot add more than 24 passengers</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="year">1<br>yrs</br></string>
    <string name="reset_filter">Reset Filters</string>
    <string name="no_filter_hotels_found">No hotels found for the selected filters</string>
    <string name="no_filters_hotels_title">Filter Hotels</string>
    <string name="Reset_filter">Reset Filter</string>
    <string name="Network_not_avilable">Network Not Available</string>
    <string name="Sorry_unable_to_create_maps">Sorry! unable to create maps</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="tap_here_to_login">Tap here to login</string>
    <string name="Asia_Pacific">Asia and Pacific</string>
    <string name="EUROPE">EUROPE</string>
    <string name="rate_us_title">Rate HolidayME</string>
    <string name="rate_us_msg">If you enjoy using HolidayMe, please take a moment to rate it.</string>
    <string name="rate_now">Rate It Now</string>
    <string name="remind_later">Remind Me Later</string>
    <string name="no_thanks">No Thanks</string>
    <string name="revert_shortly">We will revert shortly!</string>
    <string name="alternatively" formatted="false">Alternately, please feel free to contact us on %s and we will be happy to assist you.</string>
    <string name="thankyou_for_choosing">Thank you for choosing Holiday Me as your travel Partner.</string>
    <string name="close">CLOSE</string>
</resources>